<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.sampleandiosapp.session3_assignment2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:splitMotionEvents="false"
        android:weightSum="7"
        android:keepScreenOn="false"
        android:divider="@color/abc_primary_text_material_light">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1_color"
            android:background="@color/Red"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"/>
                        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2_color"
            android:background="@color/Orange"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"/>
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3_color"
            android:background="@color/Yellow"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4_color"
            android:background="@color/Green"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button5_color"
            android:background="@color/Blue"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button6_color"
            android:background="@color/Indigo"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button7_color"
            android:background="@color/Violet"
            android:id="@+id/button7"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"/>

    </LinearLayout>
</RelativeLayout>
